# gayum

./: LICENSE  README.md  main.py  pyproject.toml
gayum/: __init__.py  dists.py  exceptions.py  formula.py  gam.py  terms.py
tests/: conftest.py  test_gam.py  test_terms.py
