[project]
name = "gayum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.9.1",
    "narwhals>=2.17.0",
]

[project.optional-dependencies]
test = []

[tool.setuptools.package-data]
gayum = ["gayum/*"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-vv'

[dependency-groups]
dev = [
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pytest>=9.0.2",
]
